Readability fixes

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
         border-radius: 10px;
         background-color: #2a628f;
         text-align: center;
-        width: 50%;
+        width: 60%;
         margin-left: auto;
         margin-right: auto;
         padding-top: 10px;
